# HirGen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  optimizations
AllBugs/confirmed/: bug10.py  bug11.py  bug14.py  bug15.py  bug16.py  bug17.py  bug1_builderror.py  bug2_fuseops.py  bug3_vm_optlevel0.py  bug4_fp16_cuda.py  bug5_equivGraph_lackWarning.py  bug6_nowarning_segfault.py  bug7.py  bug8.py  bug9_ToANormalForm.py
AllBugs/disruptive-mode/: 10.py  101.py  105.py  117.py  12.py  123.py  125.py  126.py  129.py  130.py  131.py  132.py  135.py  141.py  142.py  143.py  145.py  147.py  15.py  152.py  162.py  165.py  166.py  27.py  28.py  29.py  3.py  33.py  34.py  35.py  38.py  40.py  43.py  52.py  56.py  62.py  7.py  71.py  76.py  81.py  (+2 more)
AllBugs/not_confirmed/: 1bug_no_such_func.py  bug7_infertype.py  bug_argument_mismatch.py  bug_float16_mod_unsupport.py
Techs/LEMON4TVM/: dump.rdb  readme.md
Techs/MT-DLComp/: README.md  arg.py  compile_run.py  cross_diff.py  debugging.py  emi_mutate.py  run_multi.py
Techs/TVMfuzz-exp/: 08.env  08env.sh  exp.env  exp.py  expenv.sh
exp_results/HIRFuzz/: 5.py  9.py
exp_results/HirGen/: 4.py  record.txt
exp_results/HirGen-coverage/: run-coverage_guided.py
include/: constraints.hpp  coverage.hpp  generator.hpp  globalType.hpp  globalVar.hpp  graphNode.hpp  logging.hpp  node.hpp  nodeRelation.hpp  pool.hpp  pythonFile.hpp  random.hpp  stringUtils.hpp
src/: constraints.cpp  coverage.cpp  generate.cpp  globalType.cpp  globalVar.cpp  graphNode.cpp  logging.cpp  nodeRelation.cpp  pool.cpp  pythonFile.cpp  random.cpp  stringUtils.cpp
(+686 files in other folders)
